Fix font sizes in Syn Ftr Menus (basic, CF, OOP) because they are too big

--- a/styles.css
+++ b/styles.css
@@ -538,4 +538,8 @@ footer {
         font-size: 0.6rem;
     }
 
+    .basic-btn, .cf-btn, .oop-btn {
+        font-size: 0.7rem;
+    }
+
 }
